Modernize obevo-dbmetadata-impl to Java 17
Source-level modernization only: anonymous Eclipse Collections classes to
lambdas/method references, multi-line SQL concatenation to text blocks,
pattern matching for instanceof, switch expressions, and try-with-resources
for JDBC. Public/protected API signatures and behavior are unchanged.

 covered by: anastosj.dco

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>